--- a/www/index.html
+++ b/www/index.html
@@ -93,7 +93,8 @@
                   <span @click="togglePriority( todo, 3 )"
                     :class="{ 'label label-default priority-label inactive': todo.priority !== 3 , 'label label-info priority-label': todo.priority === 3 }">
                     <!-- <i class="fa fa-chevron-down"></i> -->
-                    L</span>
+                    L
+                  </span>
                   <span @click="togglePriority( todo, 2 )"
                     :class="{ 'label label-default priority-label inactive': todo.priority !== 2 , 'label label-primary priority-label': todo.priority === 2 }">M</span>
                   <span @click="togglePriority( todo, 1 )"
@@ -132,14 +133,14 @@
     // Your web app's Firebase configuration
     // For Firebase JS SDK v7.20.0 and later, measurementId is optional
     var firebaseConfig = {
-      apiKey: "AIzaSyAuuxsVWdVEMB0Dfj5SUTDlKICJD4G2fZ0",
+      apiKey: "<enter your api key>",
       authDomain: "two-do-lists.firebaseapp.com",
       databaseURL: "https://two-do-lists.firebaseio.com",
       projectId: "two-do-lists",
       storageBucket: "two-do-lists.appspot.com",
-      messagingSenderId: "967140685667",
-      appId: "1:967140685667:web:8cbb16b678bc0cdbed4556",
-      measurementId: "G-WEG056VVPY"
+      messagingSenderId: "<enter your id>",
+      appId: "<your app id>",
+      measurementId: "<your measurement id>"
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
